@@ -141,7 +141,7 @@ def process_tables(key, value, fmt, meta):
             value[1] += [RawInline('tex', r'\label{%s}'%attrs[0])]
         elif type(references[attrs[0]]) is int:
             value[1] = [Str(captionname), Space(),
-                        Str('%d.'%references[attrs[0]]), Space()] + \
+                        Str('%d:'%references[attrs[0]]), Space()] + \
                         list(caption)
         else:  # It is a string
             assert type(references[attrs[0]]) in STRTYPES
@@ -149,10 +149,10 @@ def process_tables(key, value, fmt, meta):
             text = references[attrs[0]]
             if text.startswith('$') and text.endswith('$'):
                 math = text.replace(' ', r'\ ')[1:-1]
-                el = Math({"t":"InlineMath", "c":[]}, math)
+                els = [Math({"t":"InlineMath", "c":[]}, math), Str(':')]
             else:
-                el = Str(text)
-            value[1] = [Str('Table'), Space(), el, Space()] + list(caption)
+                els = [Str(text + ':')]
+            value[1] = [Str('Table'), Space()] + els + [Space()] + list(caption)
 
         # Context-dependent output
         if fmt == 'latex' and is_tagged:  # Code in the tags
